--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@ header {
 }
 main {
     min-height: 75vh;
+    font-family: 'AdorshoLipi', Arial, sans-serif !important;
 }
 .input-label {
-    display: inline-block;
     white-space: nowrap;
     padding: 0.375rem 0.75rem;
     line-height: 1.5;
