--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,10 @@ main {
     html{
         font-size: 70%;
     }
-    #case-study .card{
-        width: 80%;
+}
+@media only screen and (min-width:768px){
+    .w-md-75 {
+        width: 75% !important;
     }
 }
+
