--- a/css/style.css
+++ b/css/style.css
@@ -24,4 +24,9 @@ main {
         width: 75% !important;
     }
 }
+@media only screen and (max-width:768px){
+    html{
+        font-size: 85%;
+    }
+}
 
