--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ main {
         width: 75% !important;
     }
 }
-@media only screen and (max-width:768px){
+@media only screen and (min-width:576px) and (max-width:768px){
     html{
         font-size: 85%;
     }
