--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ header {
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
 }
+.font-md {
+    font-size: 1.15rem;
+}
 .font-lg {
     font-size: 1.5rem;
 }
